--- a/gateway.yaml
+++ b/gateway.yaml
@@ -1,43 +1,42 @@
-apiVersion: "xbank/v1beta1"
-kind: "Gateway"
+apiVersion: "xbank/v1beta3"
+kind: "Gatewayt"
 metadata:
   name: "repo3"
-  version: "v1"
-  minorVersion: "1.0"
-  teamName: "A-Team"
+  version: "v3"
+  minorVersion: "0.0"
+  teamName: "B-Team"
 spec:
   muhtar: "1.6.6"
   encumen: "1.2.3"
   contextPath: "/repo3-path"
   operations:
-  - name: "operation name zafer"
-    description: "operation desc"
+  - name: "getAlisgidisCustomerData"
+    description: "getAlisgidisCustomerData"
     httpVerb: "POST"
-    route: "/operation"
+    route: "/get-alisgidis-customer-data"
     target:
       httpVerb: "POST"
-      host: "host"
-      timeoutInSeconds: 300
+      host: "core-nonprelive"
+      timeoutInSeconds: 120
       transformationHandledExceptionCodes:
-      - 307
+      - "300"
+      - "500"
       - 400
-      - 405
-      - 402
       route:
-        type: "header"
-        value: "vluee"
+        type: "uri"
+        value: "RBF_GET_ALISGIDIS_CUSTOMER_DATA"
     transformation:
       request:
-        filepath: "/repo3-path/operation name zafer/transformation/request.mjs"
-        timeoutInMilliSeconds: 3000
+        filepath: "/repo3-path/getAlisgidisCustomerData/transformation/request.mjs"
+        timeoutInMilliSeconds: 4000
       response:
-        filepath: "/repo3-path/operation name zafer/transformation/response.mjs"
-        timeoutInMilliSeconds: 5000
+        filepath: "/repo3-path/getAlisgidisCustomerData/transformation/response.mjs"
+        timeoutInMilliSeconds: 4000
     validation:
       request:
-        filepath: "/repo3-path/operation name zafer/validation/request.mjs"
+        filepath: "/repo3-path/getAlisgidisCustomerData/validation/request.mjs"
       response:
-        filepath: "/repo3-path/operation name zafer/validation/response.mjs"
+        filepath: "/repo3-path/getAlisgidisCustomerData/validation/response.mjs"
   transformationRepo:
     url: "https://github.com/zaferbozkurtsavana/apigw-repo3"
-    tag: "v1.0.0"
+    tag: "v1.0.1"
