--- a/gateway.yaml
+++ b/gateway.yaml
@@ -10,7 +10,7 @@ spec:
   encumen: "1.2.3"
   contextPath: "/repo3-path"
   operations:
-  - name: "get-alis-gidis"
+  - name: "alis-gidis"
     description: "getAlisgidisCustomerData"
     httpVerb: "POST"
     route: "/get-alisgidis-customer-data"
@@ -27,16 +27,16 @@ spec:
         value: "RBF_GET_ALISGIDIS_CUSTOMER_DATA"
     transformation:
       request:
-        filepath: "/repo3-path/get-alis-gidis/transformation/request.mjs"
+        filepath: "/repo3-path/alis-gidis/transformation/request.mjs"
         timeoutInMilliSeconds: 4000
       response:
-        filepath: "/repo3-path/get-alis-gidis/transformation/response.mjs"
+        filepath: "/repo3-path/alis-gidis/transformation/response.mjs"
         timeoutInMilliSeconds: 4000
     validation:
       request:
-        filepath: "/repo3-path/get-alis-gidis/validation/request.mjs"
+        filepath: "/repo3-path/alis-gidis/validation/request.mjs"
       response:
-        filepath: "/repo3-path/get-alis-gidis/validation/response.mjs"
+        filepath: "/repo3-path/alis-gidis/validation/response.mjs"
   transformationRepo:
     url: "https://github.com/zaferbozkurtsavana/apigw-repo3"
-    tag: "v1.0.2"
+    tag: "v1.0.3"
